prevent horizontal scroll from showing when not necessary

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -76,7 +76,7 @@ ul {
 
 .hand {
     opacity: .82;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
 }
